fix(frontend,access,docs): T-FE-018 双轨子代理评审收口
- 双轨评审（代码轨 0P1+0P2+5P3 / 文档轨 2P1+1P2+3P3）逐条代码级核实全属实全处置
- 事实性修正：两看板（phase3-plan/tasks README）done 同步、任务卡 L36/L62 与
  api 注释「网关 404」按实测对齐 403、mock 旧名注释 3 处、api-contract 轮次
  标记 1 处、tsconfig include 补 mock/_shared/*.ts（更名后 tsc 覆盖缩减退转）
- 用户决策①：SUB_PERM 顶层通配 "*" jsonb 链路不可达=登记已知缺陷
  （api-contract §6.5.2 判定步骤 1 注记，ALLOW_ALL 以嵌套 child_types:["*"] 替代）
- 用户决策②：bootstrap 授权匹配拆两级——GrantIdentity 缺行 fail-fast，
  grantedBits/canGrant/conditionId/dependOn/grantSource 漂移仅 warn 放行不重种
  （AccessBootstrapPgIT +1 漂移放行回归锁 16/16，缺行 fail-fast 维持；
  architecture §14.2 + runbook 语义回写；dev 库 id48 漂移下 bootstrap=true
  重启由拒启改为放行实证）
- 用户决策③：前端类型候选请求 403 同样进 typePermDenied 降级块（探查粒度
  差异窄场景：实例级 TYPE_DEFINITION:VIEW 探查通过而类型级门禁拒绝）；
  hook.spec +4 用例回归锁，vitest 202/202 + typecheck + eslint 绿
- 用户决策④：停用条件三子项补验全过（复制入口禁用+悬停提示 / 「条件已停用」
  回显标注 / 20042 同值豁免 update code 200 且 DB 断言 condition 保留）
- 任务卡：发现三项改已决策处置、评审补变更与补验记录入卡、环境终态更新
  （9100 恢复 bootstrap=true 模式）